Fix footer being invisible bug

--- a/styles.css
+++ b/styles.css
@@ -14,11 +14,6 @@ body {
     display: flex;
 }
 
-.footer {
-    display: flex;
-    background-color: #2b2b2b;
-}
-
 .header-hero, 
 .sign-up-text {
     flex-direction: column;
@@ -135,10 +130,11 @@ footer {
 }
 
 footer {
+    background-color: #2b2b2b;
     display: flex;
     text-align: center;
     align-items: center;
-    flex-basis: 8vh;
+    flex-basis: 10vh; 
 }
 
 footer p {
